# AAMToolbox

./: CMakeLists.txt  LICENSE.txt  README.md  test_config.h.in
cmake/: aamutils.cmake  gtest.cmake
contribute/gtest/: CTestTestfile.cmake
contribute/gtest/gtest.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  gtest.lastbuildstate  lib.command.1.tlog
contribute/gtest/gtest_main.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  lib.command.1.tlog
contribute/gtest/include/gtest/: gtest.h
data/: MUCT_list.txt  aam_a0.raw  cond_A.raw  cootes_list.txt  di_grad.raw  dj_grad.raw  imm_list.txt  s_data.raw  triangles.txt
include/aam/: AAMEstimator.h  AAMFunctions2D.h  AAMFunctions3D.h  AAMModel.h  AppearanceData.h  AppearanceDataIC.h  CommonFunctions.h  Exceptions.h  FDHelper.h  ICAAMFunctions.h  ICAAMModel.h  OptimHelper2D.h  PiecewiseWarp.h  ShapeAppearanceData.h  ShapeData.h  TrainConventional.h  TrainIC2D.h  TrainModelInfo.h  TrainModelLoader.h  TrainOptions.h  TrainStrategy.h  aam.h  vector_op.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: AAMEstimator.cpp  AAMFunctions2D.cpp  AAMFunctions3D.cpp  AAMModel.cpp  AppearanceData.cpp  AppearanceDataIC.cpp  CommonFunctions.cpp  FDHelper.cpp  ICAAMFunctions.cpp  ICAAMModel.cpp  OptimHelper2D.cpp  PiecewiseWarp.cpp  ShapeAppearanceData.cpp  ShapeData.cpp  TrainConventional.cpp  TrainIC2D.cpp  TrainModelInfo.cpp  TrainModelLoader.cpp  TrainStrategy.cpp
tests/: CMakeLists.txt  aam_tests.cpp  aamestimatorTest.cpp  aldataTest.cpp  aplymodelTest.cpp  aplymodelicTest.cpp  condTest.cpp  delaunayTest.cpp  fdhelperTest.cpp  grad2DTest.cpp  gsorthTest.cpp  load_vector.cpp  load_vector.h  makeShapeICTest.cpp  mappearanceTest.cpp  msearchTest.cpp  msmodelTest.cpp  pcaTest.cpp  procrustesTest.cpp  reignoiseTest.cpp  tminfoTest.cpp  tmloadTest.cpp  trainICTest.cpp  wmapTest.cpp  wtriangleTest.cpp
tests_old/: a2vectorTest.cpp  aplymodelTest.cpp  aplymodelicTest.cpp  atransformTest.cpp  cjacobianTest.cpp  computeSDTest.cpp  condTest.cpp  cshaTest.cpp  cweightsTest.cpp  drobjectTest.cpp  grad2DTest.cpp  makeappICTest.cpp  msearchTest.cpp  msmodelTest.cpp  sloadTest.cpp  tmloadTest.cpp  wcomposTest.cpp
utils/: CMakeLists.txt
utils/aam_capture/: aam_capture.cpp
utils/aam_train/: aam_train.cpp
